--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <button id="startButton">Start</button>
     <button id="doneButton">Done</button>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script>
+        // Attach event listeners to buttons and send messages to Flutter
+        document.getElementById('startButton').addEventListener('click', function () {
+            window.flutter.postMessage("startButtonClicked");
+        });
+
+        document.getElementById('doneButton').addEventListener('click', function () {
+            window.flutter.postMessage("doneButtonClicked");
+        });
+    </script>
 </body>
 
 </html>
