--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     <button id="startButton">Start</button>
     <button id="doneButton">Done</button>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script>
+        document.getElementById('startButton').addEventListener('click', function () {
+            document.getElementById('welcomeText').innerText = 'Start Button Clicked!';
+            window.flutter.postMessage("startButtonClicked");
+        });
+
+        document.getElementById('doneButton').addEventListener('click', function () {
+            document.getElementById('welcomeText').innerText = 'Done Button Clicked!';
+            window.flutter.postMessage("doneButtonClicked");
+        });
+
+    </script>
 </body>
 
 </html>
