--- a/index.html
+++ b/index.html
@@ -12,20 +12,7 @@
     <button id="startButton">Start</button>
     <button id="doneButton">Done</button>
 
-    <!-- <script src="script.js"></script> -->
-    <script>
-        document.getElementById('startButton').addEventListener('buttonClick', function () {
-            document.getElementById('welcomeText').innerText = 'Start Button Clicked!';
-            // print
-            // window.flutter.postMessage("startButtonClicked");
-        });
-
-        document.getElementById('doneButton').addEventListener('buttonClick', function () {
-            document.getElementById('welcomeText').innerText = 'Done Button Clicked!';
-            // window.flutter.postMessage("doneButtonClicked");
-        });
-
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
